src/stylesheets/vortex/page-mod-load-order.scss
#page-generic-loadorder {
  .layout-flex {
    overflow: auto;
  }

  .load-order-entry {
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: $brand-bg;
    margin: 0px;

    height: 100%;
    overflow: auto;
    border-width: 1px;
    border-style: solid;
    border-color: $gray;
  
    .load-order-index {
      padding: 2px 2px;
      margin-right: 15px;
    }

    .locked-entry-logo {
      margin-right: 15px;
      margin-left: auto;
    }

    &.dragging {
      opacity: 0;
    }

    &.locked {
      background-color: $brand-primary;
    }

    &.external {
      .load-order-unmanaged-banner {
        display: block;
        text-align: center;
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        background: $brand-primary;
      }

      .external-caution-logo {
        margin-left: 5px;
      }
    }
  }

  #loadorderinfo {
    padding: 15px;
    height: 100%;
  }
  
  #mod-info {
    font-size: 1.2em;
  }
  
  #mod-img {
    width: 150px;
    height: 90px;
    margin: 5px 10px 5px 5px;
    border: 1px solid $brand-secondary;
  }
}

